syntax = "proto3";

service ComputeNode {
  rpc Ping (PingMessage) returns (PongMessage);
}

message PingMessage {
  string node_id = 1;
}

message PongMessage {
  string node_id = 1;
  int64 timestamp = 2;
}
